--- a/src/GanttComponents/Shared/NavMenu.razor
+++ b/src/GanttComponents/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="logger-demo">
+                <span class="oi oi-terminal" aria-hidden="true"></span> Logger Demo
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
