--- a/src/GanttComponents/_Imports.razor
+++ b/src/GanttComponents/_Imports.razor
@@ -11,4 +11,5 @@
 @using GanttComponents.Models
 @using GanttComponents.Services
 @using GanttComponents.Components.TaskGrid
+@using GanttComponents.Components.TimelineView
 @using GanttComponents.Shared
