--- a/src/GanttComponents/Shared/NavMenu.razor
+++ b/src/GanttComponents/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="timeline-demo">
+                <span class="oi oi-calendar" aria-hidden="true"></span> Timeline Demo
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="wbs-demo">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> WBS Demo
             </NavLink>
