--- a/src/GanttComponents/Shared/NavMenu.razor
+++ b/src/GanttComponents/Shared/NavMenu.razor
@@ -25,6 +25,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="gantt-composer-demo">
+                <span class="oi oi-resize-both" aria-hidden="true"></span> GanttComposer Demo
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="wbs-demo">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> WBS Demo
             </NavLink>
