--- a/src/GanttComponents/Components/TaskGrid/TaskGrid.razor
+++ b/src/GanttComponents/Components/TaskGrid/TaskGrid.razor
@@ -5,13 +5,13 @@
 
 <div class="task-grid-container" style="--row-height: @(RowHeight)px; --header-height: @(HeaderHeight)px;">
     <div class="task-grid-header">
-        <div class="header-cell" style="width: 80px;">WBS</div>
-        <div class="header-cell" style="width: 200px;">Task Name</div>
-        <div class="header-cell" style="width: 120px;">Start Date</div>
-        <div class="header-cell" style="width: 120px;">End Date</div>
-        <div class="header-cell" style="width: 100px;">Duration</div>
-        <div class="header-cell" style="width: 80px;">Progress</div>
-        <div class="header-cell" style="width: 150px;">Resources</div>
+        <div class="header-cell" style="width: 80px;">@GanttI18N.T("grid.wbs")</div>
+        <div class="header-cell" style="width: 200px;">@GanttI18N.T("grid.task-name")</div>
+        <div class="header-cell" style="width: 120px;">@GanttI18N.T("grid.start-date")</div>
+        <div class="header-cell" style="width: 120px;">@GanttI18N.T("grid.end-date")</div>
+        <div class="header-cell" style="width: 100px;">@GanttI18N.T("grid.duration")</div>
+        <div class="header-cell" style="width: 80px;">@GanttI18N.T("grid.progress")</div>
+        <div class="header-cell" style="width: 150px;">@GanttI18N.T("grid.resources")</div>
     </div>
     
     <div class="task-grid-body @(!ShowVerticalScrollbar ? "hide-scrollbar" : "")" @onscroll="OnScroll">
@@ -91,6 +91,8 @@
     [Parameter] public bool ShowVerticalScrollbar { get; set; } = true; // Controls scrollbar visibility
     [Parameter] public EventCallback<int?> OnTaskHovered { get; set; }
     [Parameter] public int? HoveredTaskId { get; set; }
+    
+    [CascadingParameter] public string CurrentLanguage { get; set; } = "en-US"; // Receive current language from MainLayout
 
     private Dictionary<int, bool> ExpandedTasks { get; set; } = new();
 
