--- a/src/GanttComponents/Shared/MainLayout.razor.css
+++ b/src/GanttComponents/Shared/MainLayout.razor.css
@@ -15,10 +15,21 @@ main {
 .top-row {
     background-color: #f7f7f7;
     border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
+    justify-content: space-between;
     height: 3.5rem;
     display: flex;
     align-items: center;
+}
+
+.top-row-left {
+    display: flex;
+    align-items: center;
+}
+
+.top-row-right {
+    display: flex;
+    align-items: center;
+    margin-right: 1rem;
 }
 
     .top-row ::deep a, .top-row .btn-link {
